# GMM

./: README.md  index.html  package-lock.json  package.json
src/: App.jsx  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/definitions/: zzz.toml
src-tauri/src/: main.rs
src/components/: FirstLaunchSetup.jsx  LightboxModal.jsx  ModCard.jsx  Sidebar.jsx  ZZZAgentCard.jsx
src/pages/: EntityPage.jsx  HomeDashboard.jsx  HomePage.jsx
src/styles/: main.css
